--- a/README
+++ b/README
@@ -4,3 +4,5 @@ A spin on the board game "Battleship".
 Uses two different MicroChip PIC24 microcontrollers in order to simulated a game of battleboats. The goal is to sink the other player's ships that are placed along the board.
 
 The two sides are both AI controlled, with one being written by the professor. Requires two different microcontrollers.
+
+Created with a partner: Nelson Yip
